...
        android:layout_height="match_parent"
        android:background="@drawable/gradient"
        tools:context=".SecondActivity"
        android:id="@+id/second_layout">

    <ImageView
            android:id="@+id/imageViewLogo"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            app:srcCompat="@drawable/logo2" />
...
